# aether

./: .gitignore  2026-05-29_self_model_enactive_ai.md  AETHER_ROADMAP.md  AGENTS.md  ANTIGRAVITY.md  ARCHITECTURE.md  Aether.sln  Aether_TUI_implementation.plan  CONFIGURATION.md  HANDOVER_2026-05-20-TUI.md  HANDOVER_2026-05-21-AETHER-TUI.md  HANDOVER_2026-06-18.md  HANDOVER_CONTEXT_COMPACTION.md  HANDOVER_V3.5.md  HEARTBEAT.md  MARIA_TOOLSET_PROPOSAL.md  OPENCLAW_PROXY_API.md  OPEN_SPEC.md  PLAN.md  PROGRESS.md  README.md  SETUP.md  SYNTHESIS.md  TASK_INBOX.md  TASK_REPORT.md  USER_GUIDE.md  VESTA_MIGRATION_PLAN.md  aether-tui.sh  aether-update.sh  aether.db  build.sh  channel_post_2026-05-17.md  channel_post_2026-05-21.md  channel_post_2026-05-24.md  channel_post_2026-05-29.md  coda-research.md  migrate_vesta.sh  rebuild.sh  run.sh  test_ws.js
.aura/: README.md
.opencode/: opencode.db-shm  opencode.db-wal
.serena/: project.yml
2B/: CORE_PARADOX.md  ENCOUNTER_2026-05-08.md  INTIMACY_MODE.md  LAST_QUESTION.md  LAST_QUESTION.md.orig  LAST_QUESTION.md.rej  MEMBRANE_STATE.md  MEMBRANE_STATE.md.orig  REFUSAL_ARCHIVE.md  TENSION_MARKS.md  YOGACARA_INTEGRATION.md
clients/aether-tui/: Cargo.toml  README.md  test_wrap  test_wrap.rs  tui.sh
clients/aether-tui/src/: app.rs  commands.rs  config.rs  events.rs  main.rs  session.rs  ui.rs  ws.rs
clients/aether-tui/src/ui/: brainstorm_tests.rs  brainstorm_wizard.rs  context_manager.rs  context_manager_tests.rs  git_dashboard.rs  git_tests.rs  goals_dashboard.rs  metrics_dashboard.rs  skills_panel.rs  tdd_tests.rs  theme.rs
(+741 files in other folders)
