[package]
name = "aether-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI client for Aether AI — Athanor Fire theme"

[[bin]]
name = "aether-tui"
path = "src/main.rs"


[dependencies]
ratatui           = { version = "=0.26.3", features = ["unstable-rendered-line-info"] }
crossterm         = "=0.27.0"
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
clap              = { version = "=4.5.4", features = ["derive"] }
chrono            = { version = "0.4", features = ["serde"] }
futures-util      = "0.3"
anyhow            = "1"
